# Pooraytracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
Results/: .gitkeep  bathroom2_20260324_0541_spp10-depth100_28.82s.hdr  bathroom2_20260324_0545_spp50-depth100_143.31s.hdr  bathroom2_20260324_0550_spp100-depth100_284.30s.hdr  bathroom2_20260324_0706_spp500-depth50_4421.03s.hdr
Source/: AABB.cpp  AABB.h  BVH.cpp  BVH.h  Camera.cpp  Camera.h  Hittable.cpp  Hittable.h  HittableList.h  Interval.cpp  Interval.h  Logger.h  Material.h  MaterialUtils.h  Model.cpp  Model.h  RandomNumberGenerator.h  Ray.h  Texture.cpp  Texture.h  Triangle.cpp  Triangle.h
ThirdPartyLibraries/: CMakeLists.txt
